<resources>
    <string name="app_name">HelloLinearLayout</string>
    <string name="red">RED</string>
    <string name="green">GREEN</string>
    <string name="blue">BLUE</string>
    <string name="yellow">YELLOW</string>
    <string name="row_one">Row one</string>
    <string name="row_two">Row two</string>
    <string name="row_three">Row three</string>
    <string name="row_four">Row four</string>
</resources>